--- a/beatuiful.html
+++ b/beatuiful.html
@@ -3,21 +3,66 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>css - cascading styel sheet</title>
-<style>
-    h1{color: chocolate;}
-    h2{color: mediumseagreen;}
-    h3{color: aqua;}
-</style>
+    <title> blog</title>
 </head>
 <body>
-    <h1>Adding Makup YEY!</h1>
+  <bdo dir="rtl"> hablu bhaiya</bdo> 
+    <h1> Lorem ipsum dolor sit amet.</h1>
 
-    <h1>please note that reconnection of water supply takes aboutb 
-        one houe to happen and it can only be done within the office working hours(8am-5pm)
 
-    </h1>
-    <h2>If payments are made after 5 PM onwards ,the reconnection will only happen next day</h2>
-    <h3>if the deadline given above is not met,the board f bdirection </h3>
+ <p>  Lorem ipsum,<b>dolor</b>  sit amet <br> consectetur <em>adipisicing</em>  elit. In,<br> corporis animi dolor <small>sit exercitationem</small> <br> sed alias <u> laboriosam, dignissimos </u> laudantium <br> ullam non <sub>repudiandae</sub> <sup>amet</sup>  aperiam ad <br>impedit <del> iusto </del> error dolores. Ut! </p>
+<blockquote> Lorem ipsum <q> dolor sit amet consectetur adipisicing elit. Omnis dolorum vero quas labore dolores voluptates,</q> explicabo molestiae illum non veniam a facere in eius id earum harum fugit temporibus magni!</blockquote>ffr <abbr title="bangladesh">bd</abbr>
+
+
+t
+
+
+<address>
+    bangladesh <br>
+    cumilla <br>
+    nangolkot
+</address>
+
+<img style=" width: 50px; border-radius:80%;" src="images/mama.jpg">
+<table border="1">
+<tr>
+    <th>hasan</th>
+    <th> shiblu</th>
+    <th>sharif</th>
+
+
+</tr>
+<tr>
+    <th>1</th>
+    <th>2</th>
+    <th>3</th>
+</tr>
+
+</table>
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/Io0WdUNVZPc?si=Pk0C3fLnfi7T2E3k" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<a href="https://www.youtube.com/"> click</a>
+<form action="#" method="post">
+<fieldset>
+    <legend>Contact Us</legend>
+    Frist name
+    <input type="text" placeholder="Frist name "><br><br>
+    Last name
+    <input type="text" placeholder="Last name"><br>
+    gender:
+    <input type="radio" name="gender">male
+    <input type="radio" name="gender">female
+    <input type="radio" name="gender">Other
+
+
+
+
+
+
+
+</fieldset>
+
+
+</form>
 </body>
 </html>
